Remove user-scalable to allow pinch and zoom. Fix input elements zoom issue on iOS

--- a/static/stylesheets/sass/html-elements/normalize.scss
+++ b/static/stylesheets/sass/html-elements/normalize.scss
@@ -290,6 +290,17 @@
         }
 
     /**
+     * Stops iOS safari to zoom in on focus
+     */
+        input,
+        textarea,
+        select{
+            .touch &{
+                font-size:16px !important; //
+            }
+        }
+
+    /**
      * Address Firefox 4+ setting `line-height` on `input` using `!important` in
      * the UA stylesheet.
      */
